Add images + ingredients CCP

--- a/recipes/CajunChickenPasta.html
+++ b/recipes/CajunChickenPasta.html
@@ -7,5 +7,23 @@
 </head>
 <body>
     <h1>Cajun Chicken Pasta</h1>
+    <img src="../images/CajunChickenPasta.png" alt="Cajun Chicken Ziti in a black pan.">
+    <h4>Description:</h4>
+    <p>
+        Cajun Chicken Pasta is a delicious dish that takes about an hour to prepare and cook. This is a relatively easy recipe
+        as there are not many ingredients, nor is the preparation very difficult.
+    </p>
+    <ul>
+        <li>Chicken(preferably breasts)</li>
+        <li>Ziti</li>
+        <li>Heavy Whipping Cream</li>
+        <li>Diced Tomatoes</li>
+        <li>Peppers</li>
+        <li>Onions</li>
+        <li>Paprika</li>
+        <li>Salt</li>
+        <li>Pepper</li>
+        <li>Adobo(optional)</li>
+    </ul>
 </body>
 </html>
