Add CCP instructions

--- a/recipes/CajunChickenPasta.html
+++ b/recipes/CajunChickenPasta.html
@@ -13,10 +13,12 @@
         Cajun Chicken Pasta is a delicious dish that takes about an hour to prepare and cook. This is a relatively easy recipe
         as there are not many ingredients, nor is the preparation very difficult.
     </p>
+    <h3>ingredients:</h3>
     <ul>
         <li>Chicken(preferably breasts)</li>
         <li>Ziti</li>
         <li>Heavy Whipping Cream</li>
+        <li>Cream Cheese</li>
         <li>Diced Tomatoes</li>
         <li>Peppers</li>
         <li>Onions</li>
@@ -25,5 +27,22 @@
         <li>Pepper</li>
         <li>Adobo(optional)</li>
     </ul>
+    <h3>Steps:</h3>
+    <ol>
+        <li>Cut chicken into small cubes</li>
+        <li>Chop vegetables</li>
+        <li>Season chicken with salt, pepper, paprika, and Adobo</li>
+        <li>Heat stove to medium/high heat(6-8)</li>
+        <li>Cook chicken thoroughly</li>
+        <li>Add vegetables to chicken</li>
+        <li>Bring the large pot for the pasta to boil</li>
+        <li>Add ziti into large pot</li>
+        <li>Add heavy cream and tomatoes to chicken</li>
+        <li>Mix all ingredients in pan</li>
+        <li>In chunks, add cream cheese and mix</li>
+        <li>Strain the ziti when finished boiling</li>
+        <li>Plate the ziti and chicken/sauce mix</li>
+        <li>Eat!</li>
+    </ol>
 </body>
 </html>
