--- a/recipes/CajunChickenPasta.html
+++ b/recipes/CajunChickenPasta.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Cajun Chicken Pasta</h1>
-    <img src="../images/CajunChickenPasta.png" alt="Cajun Chicken Ziti in a black pan.">
+    <img src="../images/CCP2.png" alt="Cajun Chicken Ziti in a black pan.">
     <h4>Description:</h4>
     <p>
         Cajun Chicken Pasta is a delicious dish that takes about an hour to prepare and cook. This is a relatively easy recipe
