base with info, no updates

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <li><a href="./recipes/CajunChickenPasta.html">Cajun Chicken Pasta</a></li>
         <li><a href="./recipes/PastaMeatSauce.html">Pasta and Meat sauce</a></li>
     </ul>
+    <script src="foodJStest.js"></script>
 </body>
 </html>
