--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li>Odin Food Recipes</li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <body>
+        Hello everyone my name is Keith and this is my first website. So listed below are a list of possible recipes that 
+        I have learned. 
+    </body>
     <ul>
         <li><a href="./recipes/CajunChickenPasta.html">Cajun Chicken Pasta</a></li>
         <li><a href="./recipes/PastaMeatSauce.html">Pasta and Meat sauce</a></li>
