Fix Nav main/ul styling

--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li>Odin Food Recipes</li>
+                <li id="mainHeader">Odin Food Recipes</li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     <body>
+        <h2>About</h2>
         Hello everyone my name is Keith and this is my first website. So listed below are a list of possible recipes that 
         I have learned. 
+        <h2>Recipes</h2>
+        <ul>
+            <li><a href="./recipes/CajunChickenPasta.html">Cajun Chicken Pasta</a></li>
+            <li><a href="./recipes/PastaMeatSauce.html">Pasta and Meat sauce</a></li>
+        </ul>
     </body>
-    <ul>
-        <li><a href="./recipes/CajunChickenPasta.html">Cajun Chicken Pasta</a></li>
-        <li><a href="./recipes/PastaMeatSauce.html">Pasta and Meat sauce</a></li>
-    </ul>
+    
     <script src="foodJStest.js"></script>
 </body>
 </html>
