fix: indentation and grouping issues

--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
     </header>
     <body>
         <h2>About</h2>
-        Hello everyone my name is Keith and this is my first website. So listed below are a list of possible recipes that 
+        <p id="aboutP">Hello everyone my name is Keith and this is my first website. So listed below are a list of possible recipes that 
         I have learned. 
+        </p>
         <h2>Recipes</h2>
-        <ul>
-            <li><a href="./recipes/CajunChickenPasta.html">Cajun Chicken Pasta</a></li>
-            <li><a href="./recipes/PastaMeatSauce.html">Pasta and Meat sauce</a></li>
-        </ul>
+        <recpiesList>
+            <ul>
+                <li><a href="./recipes/CajunChickenPasta.html">Cajun Chicken Pasta</a></li>
+                <li><a href="./recipes/PastaMeatSauce.html">Pasta and Meat sauce</a></li>
+            </ul>
+        </recpiesList>
     </body>
     
     <script src="foodJStest.js"></script>
